samples/_failures_safe/1761500415_1e46cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd78c66f.c: In function ‘main’:
./samples/SAFE/__tmp_cd78c66f.c:129:24: error: expected ‘;’ at end of input
  129 |             fill_matrix
      |                        ^
      |                        ;
./samples/SAFE/__tmp_cd78c66f.c:129:13: error: expected declaration or statement at end of input
  129 |             fill_matrix
      |             ^~~~~~~~~~~
./samples/SAFE/__tmp_cd78c66f.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cd78c66f.c:129:13: error: expected declaration or statement at end of input
